[package]
name = "leeklaunch"
description = "biblical roblox bootstrapper"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/theleekco/leeklaunch"

[dependencies]
zip = "4.3.0"
serde_json = "1.0"
directories = "6.0.0"
windows-registry = "0.5.3"
phf = { version = "0.11", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5.41", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
winresource = "0.1"
